<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/adduser"
        android:title="@string/add_user" />
    <item
        android:id="@+id/ApprovedUser"
        android:title="@string/approved_user" />

    <item
        android:id="@+id/deleteuser"
        android:title="@string/delete_user" />
    <item
        android:id="@+id/updateprofile"
        android:title="@string/update_profile" />
    <item
        android:id="@+id/ShowProfile"
        android:title="@string/show_profile" />

    <item
        android:id="@+id/send"
        android:title="@string/send" />

    <item
        android:id="@+id/share"
        android:title="@string/share" />

    <item
        android:id="@+id/logout"
        android:title="@string/log_out" />
    <item
        android:id="@+id/Setting"
        android:title="@string/settings" />


</menu>
