<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggradient"
    android:orientation="vertical"
    tools:context="com.example.android1.adminusertypelogin.LoginActivity">




    <EditText
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/edittextemail"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/edittextbg"
        android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_perm_identity_black_24dp"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="17sp" />

    <EditText
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/edittextpassword"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextbg"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="17sp" />

    <RadioGroup
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/radioTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="sans-serif"
            android:text="@string/select_user_type"
            android:textColor="#000"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radiobuttonUser"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:checked="false"
            android:fontFamily="sans-serif"
            android:text="@string/user"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radiobuttonAdmin"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:checked="false"
            android:fontFamily="sans-serif"
            android:text="@string/admin"
            android:textSize="17sp" />
    </RadioGroup>


    <Button
        android:id="@+id/buttonlogin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttonbg"
        android:text="@string/login"
        android:textAllCaps="false" />

</LinearLayout>